--- a/www/css/app.css
+++ b/www/css/app.css
@@ -22,6 +22,29 @@
 		box-shadow:0px 20px 44px rgba(0,0,0,.5)
 	}
 }
+*{
+	transition: 1s;
+}
+#wcm i.icon {
+	margin-bottom: 7px;
+}
+#wcm .list li.item-content:first-of-type {
+	padding-top: 20px;
+}
+#wcm .input-state {
+	top: auto;
+	right: 0;
+    margin-top: 0;
+    bottom: 6px;
+    width: 24px;
+    height: 24px;
+	position: absolute;
+	background-size: 24px 24px;
+}
+#wcm .card-footer {
+	padding-left: 0;
+	padding-right: 0;
+}
 #live .page-content iframe{
 	transform: rotate(90deg);
 	position: absolute;
